--- a/cart.html
+++ b/cart.html
@@ -64,6 +64,7 @@
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
+            <!-- frhbvhjbv -->
             <div class="footer-section">
                 <h3>Follow Us</h3>
                 <div class="social-icons">
